Fix some bugs with the image sizes and image magnify. Tested all.

--- a/public/index.html
+++ b/public/index.html
@@ -269,14 +269,7 @@
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
-
-                        <!--/a>
-
-                                            <a class="magnific-ajax" href="her.html">
-                            <div class="de-icon circle light medium-size inline">
-                                <i class="de-icon-link"></i>
-                              </div>
-                          </a-->
+                      </a>
 
                     </div>
                   </div>
@@ -354,7 +347,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill,g_east/TimAndIrinaFirstDate07272012.jpg" class="magnific-zoom" title="Our First Date">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_east/TimAndIrinaFirstDate07272012.jpg" class="magnific-zoom" title="Our First Date">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -468,7 +461,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill/DSC02719_rsnsn2.jpg" class="magnific-zoom" title="He Proposed">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill/DSC02719_rsnsn2.jpg" class="magnific-zoom" title="He Proposed">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -514,7 +507,7 @@
               <div class="photo-item frame-border animation delay1 fadeInLeft">
 
                 <!--PHOTO LOVE RINGS-->
-                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill/IMG_7401_gvrkns.jpg" alt="" class="hover-animation image-zoom-in">
+                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill,g_south/IMG_7401_gvrkns.jpg" alt="" class="hover-animation image-zoom-in">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -526,7 +519,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill/IMG_7401_gvrkns.jpg" class="magnific-zoom" title="The Ring">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_south/IMG_7401_gvrkns.jpg" class="magnific-zoom" title="The Ring">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -738,17 +731,12 @@
 
             <!-- SECTION TITLE -->
             <div class="col-md-offset-2 col-md-8 text-center">
-
               <div class="section-title animation fadeInUp">
-                <h2>
-                                OUR <img src="images/heart-icon.png" alt=""> GALLERY
-                              </h2>
-
+                <h2>OUR&nbsp;<img src="images/heart-icon.png" alt="heart">&nbsp;GALLERY</h2>
                 <p></p>
-
-
               </div>
             </div>
+
           </div>
           <!-- END of ROW-1 -->
 
@@ -761,7 +749,7 @@
               <div class="photo-item frame-border animation fadeIn">
 
                 <!--PHOTO 1-->
-                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill/296862_10151049517159103_214249417_n_mkcbdj.jpg">
+                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill,g_north/296862_10151049517159103_214249417_n_mkcbdj.jpg">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -773,7 +761,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_394,c_fill/296862_10151049517159103_214249417_n_mkcbdj.jpg" class="magnific-zoom-gallery" title="Our first party (at Paola&Vincent)">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/296862_10151049517159103_214249417_n_mkcbdj.jpg" class="magnific-zoom-gallery" title="Our first party (at Paola&Vincent)">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -795,7 +783,7 @@
               <div class="photo-item frame-border animation fadeIn">
 
                 <!--PHOTO 2-->
-                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill,g_faces/v1453585510/IMG_5922_di3wus.jpg">
+                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill,g_north/v1453585510/IMG_5922_di3wus.jpg">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -807,7 +795,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_394,c_fill,g_faces/v1453585510/IMG_5922_di3wus.jpg" class="magnific-zoom-gallery" title="Celebrating New Year 2014 (at Sweet Water)">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/v1453585510/IMG_5922_di3wus.jpg" class="magnific-zoom-gallery" title="Celebrating New Year 2014 (at Sweet Water)">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -829,7 +817,7 @@
               <div class="photo-item frame-border animation fadeIn">
 
                 <!--PHOTO 3-->
-                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill,g_faces/DSC00212_ze7qzd.jpg" alt="" class="hover-animation image-zoom-rotate">
+                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill,g_north_west/DSC00212_ze7qzd.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -841,7 +829,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_faces/DSC00212_ze7qzd.jpg" class="magnific-zoom-gallery" title="Our first trip to Ashville, NC (at Biltmore)">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north_west/DSC00212_ze7qzd.jpg" class="magnific-zoom-gallery" title="Our first trip to Ashville, NC (at Biltmore)">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -875,7 +863,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill/IMG_6391_ds9qeg.jpg" class="magnific-zoom-gallery" title="First trip,fisrt Christmas and New Year 2013 (San Francisco, CA)">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill/IMG_6391_ds9qeg.jpg" class="magnific-zoom-gallery" title="First trip,fisrt Christmas and New Year 2013 (San Francisco, CA)">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -897,7 +885,7 @@
               <div class="photo-item frame-border animation fadeIn">
 
                 <!--PHOTO-->
-                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill/DSC01348_af3xdm.jpg">
+                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill,g_north/DSC01348_af3xdm.jpg">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -909,7 +897,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill/DSC01348_af3xdm.jpg" class="magnific-zoom-gallery" title="We love BBQ (Williamsburg)">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC01348_af3xdm.jpg" class="magnific-zoom-gallery" title="We love BBQ (Williamsburg)">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
