The name is more important than the title. Don't qualify friends. Don't copy/paste others images to the wrong people.

--- a/public/index.html
+++ b/public/index.html
@@ -1356,8 +1356,8 @@
                 <!-- TITLE & EXCERPT -->
                 <div class="title-excerpt animation fadeIn text-center">
 
-                  <h3 class="no-margin"><a href="#">BEST MAN</a></h3>
-                  <p>Justin Ritchie</p>
+                  <h3 class="no-margin">Justin Ritchie</h3>
+                  <p>BEST MAN</p>
 
                 </div>
                 <!-- END of TITLE & EXCERPT -->
@@ -1409,8 +1409,8 @@
                 <!-- TITLE & EXCERPT -->
                 <div class="title-excerpt animation fadeIn text-center">
 
-                  <h3 class="no-margin"><a href="#">BROTHER</a></h3>
-                  <p>Nate Ernst</p>
+                  <h3 class="no-margin">Nate Ernst</h3>
+                  <p>BROTHER</p>
 
                 </div>
                 <!-- END of TITLE & EXCERPT -->
@@ -1462,8 +1462,8 @@
                 <!-- TITLE & EXCERPT -->
                 <div class="title-excerpt animation fadeIn text-center">
 
-                  <h3 class="no-margin"><a href="#">BROTHER</a></h3>
-                  <p>Aaron Ernst</p>
+                  <h3 class="no-margin">Aaron Ernst</h3>
+                  <p>BROTHER</p>
 
                 </div>
                 <!-- END of TITLE & EXCERPT -->
@@ -1514,8 +1514,8 @@
                 <!-- TITLE & EXCERPT -->
                 <div class="title-excerpt animation fadeIn text-center">
 
-                  <h3 class="no-margin"><a href="#">COLLEGE FRIEND</a></h3>
-                  <p>Brent Husky</p>
+                  <h3 class="no-margin">Brent Husky</h3>
+                  <p>FRIEND<br></p>
 
                 </div>
                 <!-- END of TITLE & EXCERPT -->
@@ -1567,8 +1567,8 @@
                 <!-- TITLE & EXCERPT -->
                 <div class="title-excerpt animation fadeIn text-center">
 
-                  <h3 class="no-margin"><a href="#">COLLEGE FRIEND</a></h3>
-                  <p>Matthew Hoyle</p>
+                  <h3 class="no-margin">Matthew Hoyle</h3>
+                  <p>FRIEND<br></p>
 
                 </div>
                 <!-- END of TITLE & EXCERPT -->
@@ -1620,8 +1620,8 @@
                 <!-- TITLE & EXCERPT -->
                 <div class="title-excerpt animation fadeIn text-center">
 
-                  <h3 class="no-margin"><a href="#">FUTURE BROTHER IN LAW</a></h3>
-                  <p>Glenn Rempe</p>
+                  <h3 class="no-margin">Glenn Rempe</h3>
+                  <p>IRINA'S BROTHER IN-LAW</p>
 
                 </div>
                 <!-- END of TITLE & EXCERPT -->
@@ -1683,7 +1683,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO NATASHA REMPE-->
-                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_scale,h_325,w_293/v1456190171/2015-02-01_14.40.19_oocasm.jpg" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1712,8 +1712,8 @@
                 <!-- TITLE & EXCERPT -->
                 <div class="title-excerpt animation fadeIn text-center">
 
-                  <h3 class="no-margin"><a href="#">MAID OF HONOR/SISTER</a></h3>
-                  <p>Natasha Rempe</p>
+                  <h3 class="no-margin">Natasha Rempe</h3>
+                  <p>MAID OF HONOR & SISTER</p>
 
                 </div>
                 <!-- END of TITLE & EXCERPT -->
@@ -1765,8 +1765,8 @@
                 <!-- TITLE & EXCERPT -->
                 <div class="title-excerpt animation fadeIn text-center">
 
-                  <h3 class="no-margin"><a href="#">FUTURE SISTER IN LAW</a></h3>
-                  <p>Natalie Ernst</p>
+                  <h3 class="no-margin"><a href="#">Natalie Ernst</a></h3>
+                  <p>TIM'S SISTER</p>
 
                 </div>
                 <!-- END of TITLE & EXCERPT -->
@@ -1789,7 +1789,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_scale,h_325,w_293/v1456190583/FullSizeRender_k9l6f9.jpg" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1818,8 +1818,8 @@
                 <!-- TITLE & EXCERPT -->
                 <div class="title-excerpt animation fadeIn text-center">
 
-                  <h3 class="no-margin"><a href="#">BEST FRIEND</a></h3>
-                  <p>Paola Gonzales</p>
+                  <h3 class="no-margin">Paola Gonzales</h3>
+                  <p>FRIEND</p>
 
                 </div>
                 <!-- END of TITLE & EXCERPT -->
@@ -1871,8 +1871,8 @@
                 <!-- TITLE & EXCERPT -->
                 <div class="title-excerpt animation fadeIn text-center">
 
-                  <h3 class="no-margin"><a href="#">COLLEGE FRIEND</a></h3>
-                  <p>Ilona Michalowska</p>
+                  <h3 class="no-margin">Ilona Michalowska</h3>
+                  <p>FRIEND</p>
 
                 </div>
                 <!-- END of TITLE & EXCERPT -->
@@ -1924,8 +1924,8 @@
                 <!-- TITLE & EXCERPT -->
                 <div class="title-excerpt animation fadeIn text-center">
 
-                  <h3 class="no-margin"><a href="#">GOOD FRIEND</a></h3>
-                  <p>XXX XXX</p>
+                  <h3 class="no-margin">SOMEONE</h3>
+                  <p>FRIEND</p>
 
                 </div>
                 <!-- END of TITLE & EXCERPT -->
