Added Natasha's Picture

--- a/public/index.html
+++ b/public/index.html
@@ -1683,7 +1683,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO NATASHA REMPE-->
-                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_293,h_325,c_fill,g_north/IMG_6673_ltzxut.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1695,7 +1695,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="https://placehold.it/293x325" class="magnific-zoom">
+                        <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_293,h_325,c_fill,g_north/IMG_6673_ltzxut.jpg" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
