Remove link from Natalie

--- a/public/index.html
+++ b/public/index.html
@@ -1765,7 +1765,7 @@
                 <!-- TITLE & EXCERPT -->
                 <div class="title-excerpt animation fadeIn text-center">
 
-                  <h3 class="no-margin"><a href="#">Natalie Ernst</a></h3>
+                  <h3 class="no-margin">Natalie Ernst</h3>
                   <p>TIM'S SISTER</p>
 
                 </div>
