--- a/public/index.html
+++ b/public/index.html
@@ -154,7 +154,7 @@
                 <a href="#our-story">STORY</a>
               </li>
               <li>
-                <a href="#where-when">WHERE &amp; WHEN</a>
+                <a href="#where-when">WHEN &amp; WHERE</a>
               </li>
               <li>
                 <a href="#gallery-section">GALLERY</a>
@@ -591,7 +591,7 @@
             <div class="col-md-offset-2 col-md-8 text-center">
 
               <div class="section-title animation fadeInUp">
-                <h2>WHERE&nbsp;<span class="and">&amp;</span>&nbsp;WHEN</h2>
+                <h2>WHEN&nbsp;<span class="and">&amp;</span>&nbsp;WHERE</h2>
 
                 <p>
                   We look forward to sharing our special day with you where we'll
