--- a/public/index.html
+++ b/public/index.html
@@ -1842,7 +1842,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_scale,h_325,w_293/v1456190583/FullSizeRender_k9l6f9.jpg" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="https://res.cloudinary.com/dlpep2th5/image/upload/c_scale,h_325,w_293/v1456190583/FullSizeRender_k9l6f9.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1854,7 +1854,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="http://res.cloudinary.com/dlpep2th5/image/upload/v1456189658/FullSizeRender_k9l6f9.jpg" class="magnific-zoom">
+                        <a href="https://res.cloudinary.com/dlpep2th5/image/upload/v1456189658/FullSizeRender_k9l6f9.jpg" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
