Now we're getting married

--- a/public/index.html
+++ b/public/index.html
@@ -558,7 +558,7 @@
           <div class="row">
             <div class="col-md-12 text-center">
               <div id="end-of-story" class="animation fadeInUp">
-                <h2>AND TODAY... WE ARE GETTING MARRIED</h2>
+                <h2>AND NOW WE'RE GETTING MARRIED!</h2>
                 <div class="heart-divider">
                   <span class="grey-line"></span>
                   <i class="de-icon-heart pink-heart"></i>
