Update the events section and fix some image bugs. Put in some starter overview text.

--- a/public/index.html
+++ b/public/index.html
@@ -1092,16 +1092,8 @@
             <div class="col-md-offset-2 col-md-8 text-center">
 
               <div class="section-title animation fadeInUp">
-                <h2>
-                                MORE <img src="images/heart-icon.png" alt=""> EVENTS
-                              </h2>
-
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit
-                  faucibus. Proin pulvinar congue ex, vitae
-                </p>
-
-
+                <h2>THE <img src="images/heart-icon.png"> EVENTS</h2>
+                <p>We are really excited to share with you the locations we have chosen for the events in our wedding. We'll start with an age-old, and fun, Russian tradition, follow it with the most beautiful of mountain-top weddings, and end the day with a celebration with the best people in the world!</p>
               </div>
             </div>
           </div>
@@ -1155,12 +1147,14 @@
 
                   <!-- TITLE & EXCERPT -->
                   <div class="title-excerpt animation fadeIn">
-
-                    <h3><a href="#">RANSOM</a></h3>
-                    <p>Ransom is perhaps the oldest tradition preserved in Russian weddings, its main purpose is having fun. Bridesmaids should torment the groom in a funny way: propose him a bunch of riddles and stupid tasks, and finally get a ransom from
-                      him. It can be money or any sweets that the groom can spare to the bride..</p>
-                    <p> Address: TDB </p>
-
+                    <h3><a href="#">THE BRIDE'S RANSOM</a></h3>
+                    <p>The <a href="https://en.wikipedia.org/wiki/Russian_wedding_traditions#Paying_the_ransom" target="_blank">Bride's Ransom</a>, known
+                      in Russian as <a href="https://translate.google.com/#en/ru/Bride's%20Ransom">Выкуп невесты</a> (Vykup nevesty),
+                      is perhaps one of the oldest Russian wedding traditions. Its main
+                      purpose is to have a good bit of fun, mostly at the Groom's expense.
+                      The Bridesmaids are in charge of lightly tormenting Tim until
+                      he gives in and pays his 'ransom'. Its an event you won't want to
+                      miss if you'd like to see Tim squirm a little.</p>
                   </div>
                   <!-- END of TITLE & EXCERPT -->
 
@@ -1186,7 +1180,7 @@
                       <div class="alignment">
                         <div class="v-align center-middle">
 
-                          <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_800,h_533,c_fill/favorites-0031-f61321708686f4678a4d89c748dc8aec_hjm513.jpg" class="magnific-zoom" title="The Ridge. Address: 389 Upper Thomas Branch Rd. Marshall, NC">
+                          <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_800,h_533,c_fill/favorites-0031-f61321708686f4678a4d89c748dc8aec_hjm513.jpg" class="magnific-zoom" title="The Ridge, Marshall, NC">
                             <div class="de-icon circle light medium-size inline">
                               <i class="de-icon-zoom-in"></i>
                             </div>
@@ -1209,10 +1203,13 @@
                   <!-- TITLE & EXCERPT -->
                   <div class="title-excerpt animation fadeIn">
 
-                    <h3><a href="#">THE RIDGE</a></h3>
-                    <p>The Ridge provides guests with breath taking 360 degree views of WNC’s gorgeous mountain ranges. Located in Marshall, NC, The Ridge offers a sense of rustic elegance while providing the perfect backdrop to our special day. After the
-                      ceremony, enjoy cocktails and appetizers on the residence’s wraparound porch or take a walk around our lush property complete with rolling hills and friendly horses.</p>
-                    <p>Address: 389 Upper Thomas Branch Rd. Marshall, NC.</p>
+                    <h3>WEDDING CEREMONY @ THE RIDGE</h3>
+                    <p>The Ridge provides guests with breathtaking 360-degree views of North Carolina's
+                      gorgeous mountain ranges. Located in Marshall, NC, twenty-five miles north of
+                      Asheville, The Ridge offers a sense of rustic elegance while providing the
+                      perfect backdrop to our special day. After the ceremony, enjoy cocktails and
+                      appetizers on the residence’s wraparound porch or take a walk around the
+                      lush property complete with rolling hills and friendly horses.</p>
 
                   </div>
                   <!-- END of TITLE & EXCERPT -->
@@ -1227,7 +1224,7 @@
                   <div class="photo-item animation fadeIn">
 
                     <!--PHOTO-->
-                    <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill,g_east/5933417685_306225955e_b_jakw5a.jpg" alt="" class="hover-animation image-zoom-in">
+                    <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_800,h_533,c_fill,g_east/5933417685_306225955e_b_jakw5a.jpg" alt="" class="hover-animation image-zoom-in">
 
                     <!--PHOTO OVERLAY-->
                     <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1239,7 +1236,7 @@
                       <div class="alignment">
                         <div class="v-align center-middle">
 
-                          <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_east/5933417685_306225955e_b_jakw5a.jpg" class="magnific-zoom" title="event-3">
+                          <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_800,h_533,c_fill,g_east/5933417685_306225955e_b_jakw5a.jpg" class="magnific-zoom" title="Pack's Tavern, The Century Room">
                             <div class="de-icon circle light medium-size inline">
                               <i class="de-icon-zoom-in"></i>
                             </div>
@@ -1262,11 +1259,13 @@
                   <!-- TITLE & EXCERPT -->
                   <div class="title-excerpt animation fadeIn">
 
-                    <h3><a href="#">THE CENTURY ROOM</a></h3>
-                    <p>The Century Room offers a beautiful turn of the century ballroom overlooking Pack Square Park and the Park’s amphitheatre. High ceilings, exposed wood trusses and brick walls create a wonderful atmosphere for your event. With a backdrop
-                      of downtown Asheville, your guests can enjoy wonderful food, impeccable service and plenty of room for dancing!</p>
-                    <p>Address: 20 South Spruce St., Asheville, NC 28801 </p>
-
+                    <h3>RECEPTION @ PACK'S TAVERN, THE CENTURY ROOM</h3>
+                    <p>The Century Room offers a beautiful turn of the century ballroom
+                      overlooking Pack Square Park and the Park’s amphitheatre. High
+                      ceilings, exposed wood trusses and brick walls will create a wonderful
+                      atmosphere for our celebration. With a backdrop of downtown Asheville,
+                      we'll enjoy wonderful food, impeccable service, and plenty of
+                      room for dancing! You are prepared for dancing right?</p>
                   </div>
                   <!-- END of TITLE & EXCERPT -->
 
