True Love Story Redux

--- a/public/index.html
+++ b/public/index.html
@@ -314,12 +314,26 @@
                               </h2>
 
                 <p>
-                  Tim & Irina moved to New York City in the Fall of 2010. Irina moved to the US from Russia. On the way to San Franscisco she decided to stay few weeks in NY to visit her good friend from her home town, Izhevsk, and fell in love with New York, started school
-                  at 317 Madison Ave next to the Grand Central. Tim got a job witht a bank and started his career at 317 Madison Ave. For two years they were taking same route, same elevator but never once met each other. After two years Irina was accepted
-                  into a degree program in computer science and had her last class in the building... Tim & Irina met after two years of passing eachother by the works of their brilliant friends (Vandi&Greg) who belived they were meant to be.
-                </p>
+                  Tim and Irina both moved to New York City in the Fall of 2010. Separately.
+                  Irina moved to the United States from <a href="https://en.wikipedia.org/wiki/Izhevsk">Izhevsk,
+                  Russia</a>. She had been visiting her sister Natasha in San Franscisco and decided to
+                  stay a few weeks longer to visit New York City and a good friend from her home town.
+                  It was New York that she first fell in love with. As soon as she could she started school
+                  at 317 Madison Ave next to Grand Central Terminal.</p>
 
+                  <p> Meanwhile, Tim started a new job in finance and began his career as well. It so happens
+                  he also worked at 317 Madison Ave. For two years the two of them were walking a similar
+                  route, riding in the same elevators, but never once did they meet.
+                  After two years of missed opportunities Irina was accepted into a degree program
+                  studying computer science at Hunter College. She soon attended her final class at
+                  317 Madison. It seemed perhaps that they would never meet.</p>
 
+                  <p>Finally, it was time for fate to intervene. Unbeknownst to them both,
+                  their mutual friends Vandi & Greg were conspiring. They thought these two eligible
+                  singles should meet and that they were meant to be together. They seemed to know what a great
+                  couple they would be. So, after years of crossed paths, Tim & Irina finally did discover each other.</p>
+
+                  <p>You know what? Vandi and Greg were right.</p>
               </div>
             </div>
           </div>
