--- a/public/index.html
+++ b/public/index.html
@@ -326,7 +326,7 @@
                   route, riding in the same elevators, but never once did they meet.
                   After two years of missed opportunities Irina was accepted into a degree program
                   studying computer science at Hunter College. She soon attended her final class at
-                  317 Madison. It seemed perhaps that they would never meet.</p>
+                  317 Madison. It seemed that perhaps they would never meet.</p>
 
                   <p>Finally, it was time for fate to intervene. Unbeknownst to them both,
                   their mutual friends Vandi & Greg were conspiring. They thought these two eligible
