A few text tweaks to the Tim and Irina descriptions

--- a/public/index.html
+++ b/public/index.html
@@ -238,7 +238,7 @@
               </div>
 
               <p class="blurb animation fadeInLeft text-center">
-                Tim was born in Arizona, raised in Fullerton, California and went to the University of North Carolina at Charlotte where he studied economics. His first job out of school landed him in New York and he's been living in New York for the past 5 years.
+                Tim was born in Arizona, raised in Fullerton, California and attended the University of North Carolina at Charlotte where he studied economics. His first job out of school landed him in New York and he's been living in New York for the past five years.
               </p>
 
             </div>
@@ -279,7 +279,7 @@
               </div>
 
               <p class="blurb animation fadeInRight text-center">
-                Irina was born and raised in Izhevsk, Russia. She studied Economics at Izhevsk State University and took a leap of faith when she moved to the New York, USA to follow her dream. She finished her second degree in the computer science in January.
+                Irina was born and raised in Izhevsk, Russia. She studied Economics at Izhevsk State University before moving to Moscow. She took a leap of faith when she moved to New York to follow her dreams. This past January she received her second University degree, in computer science, from CUNY Hunter College in Manhattan.
               </p>
 
             </div>
