Make the dates more readable in the circles

--- a/public/index.html
+++ b/public/index.html
@@ -381,8 +381,8 @@
             <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
               <div class="arrow-left"></div>
               <div class="story-date">
-                <div class="date-only">25</div>
-                <div class="month-year">07.12</div>
+                <div class="date-only">2012</div>
+                <div class="month-year">7/25</div>
               </div>
               <div class="arrow-right"></div>
               <div class="clearboth"></div>
@@ -438,8 +438,8 @@
             <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
               <div class="arrow-left"></div>
               <div class="story-date">
-                <div class="date-only">27</div>
-                <div class="month-year">07.12</div>
+                <div class="date-only">2012</div>
+                <div class="month-year">7/27</div>
               </div>
               <div class="arrow-right"></div>
               <div class="clearboth"></div>
@@ -495,8 +495,8 @@
             <div class="col-md-2 text-center story-date-wrapper animation fadeIn">
               <div class="arrow-left"></div>
               <div class="story-date">
-                <div class="date-only">25</div>
-                <div class="month-year">12.15</div>
+                <div class="date-only">2015</div>
+                <div class="month-year">12/25</div>
               </div>
               <div class="arrow-right"></div>
               <div class="clearboth"></div>
@@ -553,8 +553,8 @@
             <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
               <div class="arrow-left"></div>
               <div class="story-date">
-                <div class="date-only">25</div>
-                <div class="month-year">12.15</div>
+                <div class="date-only">2015</div>
+                <div class="month-year">12/25</div>
               </div>
               <div class="arrow-right"></div>
               <div class="clearboth"></div>
