Fix some descriptive text

--- a/public/index.html
+++ b/public/index.html
@@ -777,7 +777,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/296862_10151049517159103_214249417_n_mkcbdj.jpg" class="magnific-zoom-gallery" title="Our first party (at Paola&Vincent)">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/296862_10151049517159103_214249417_n_mkcbdj.jpg" class="magnific-zoom-gallery" title="Our first party together at Paola & Vincent's">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -811,7 +811,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/v1453585510/IMG_5922_di3wus.jpg" class="magnific-zoom-gallery" title="Celebrating New Year 2014 (at Sweet Water)">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/v1453585510/IMG_5922_di3wus.jpg" class="magnific-zoom-gallery" title="Celebrating New Years Eve 2014 at Sweet Water">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -845,7 +845,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north_west/DSC00212_ze7qzd.jpg" class="magnific-zoom-gallery" title="Our first trip to Ashville, NC (at Biltmore)">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north_west/DSC00212_ze7qzd.jpg" class="magnific-zoom-gallery" title="Our first trip to Asheville, NC visiting the Biltmore">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -879,7 +879,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill/IMG_6391_ds9qeg.jpg" class="magnific-zoom-gallery" title="First trip,fisrt Christmas and New Year 2013 (San Francisco, CA)">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill/IMG_6391_ds9qeg.jpg" class="magnific-zoom-gallery" title="First trip, first Christmas and first New Year Together in 2013 visiting San Francisco, CA">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -913,7 +913,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC01348_af3xdm.jpg" class="magnific-zoom-gallery" title="We love BBQ (Williamsburg)">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC01348_af3xdm.jpg" class="magnific-zoom-gallery" title="We love BBQ! (Williamsburg)">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -947,7 +947,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC02184_fzllcw.jpg" class="magnific-zoom-gallery" title="Celebrating Two-Year Anniversary since we met each other, July 25th, 2014 (NYC)">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC02184_fzllcw.jpg" class="magnific-zoom-gallery" title="Celebrating our 2nd anniversary of meeting in NYC, 7/25/2014">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -981,7 +981,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC02788_fdcasc.jpg" class="magnific-zoom-gallery" title="Irina's Graduation January 21st, 2016 (NYC)">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC02788_fdcasc.jpg" class="magnific-zoom-gallery" title="Irina's Graduation 1/21/2016 in NYC">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
